--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -9,7 +9,7 @@
 
    ;; Copyright (C) 2023 Makoto Morinaga
 
-   ;; Author: Makoto Morinaga <makoto@mkt3.me>
+   ;; Author: Makoto Morinaga <makoto@mkt3.dev>
 
    ;;; Code:
  #+end_src
@@ -237,13 +237,8 @@
      (when (and (not (server-running-p))
                 (display-graphic-p))
        (server-start))
-
      (bind-key "C-x C-q" 'server-edit)
    #+end_src
-
-   #+RESULTS:
-   : my:server-edit-and-close-tab
-
 ** Misc
    #+begin_src emacs-lisp
      (defalias 'yes-or-no-p 'y-or-n-p)
@@ -294,6 +289,20 @@
        (if (eq system-type 'darwin)
            (add-to-list 'default-frame-alist '(font . "Cica-20"))
          (add-to-list 'default-frame-alist '(font . "Cica-24"))))
+
+     (use-package nerd-icons :ensure t)
+
+     (use-package nerd-icons-dired
+       :ensure t
+       :hook (dired-mode-hook . nerd-icons-dired-mode))
+
+     (use-package nerd-icons-completion
+       :ensure t
+       :demand t
+       :after marginalia
+       :config
+       (nerd-icons-completion-mode)
+       :hook (marginalia-mode-hook . #'nerd-icons-completion-marginalia-setup))
    #+end_src
 ** Highlight-indent-guide
    #+begin_src emacs-lisp
@@ -514,6 +523,7 @@
     #+begin_src emacs-lisp
       (use-package consult
         :ensure t
+        :demand t
         :init
         (defun my:consult-line
             (&optional
@@ -528,6 +538,15 @@
                 ("C-z" . consult-imenu)
                 ([remap goto-line] . consult-goto-line)
                 ([remap yank-pop] . consult-yank-pop)))
+
+      (use-package consult-ghq
+        :ensure t
+        :after consult
+        :bind* (("C-c [" . consult-ghq-find)
+                ("C-c ]" . consult-ghq-grep))
+        :custom
+        (consult-ghq-find-function #'consult-find)
+        (consult-ghq-grep-function #'consult-grep))
     #+end_src
 *** marginalia
     #+begin_src emacs-lisp
@@ -593,10 +612,50 @@
         :after corfu
         :custom (kind-icon-default-face 'corfu-default) ; to compute blended backgrounds correctly
         :config
-        (custom-set-variables
-         '(kind-icon-default-style
-           '(:padding 0 :stroke 0 :margin 0 :radius 0 :height 0.6 :scale 1.0)))
-        (add-to-list 'corfu-margin-formatters #'kind-icon-margin-formatter))
+        (setq kind-icon-use-icons nil)
+        (setq kind-icon-mapping
+              `(
+                (array ,(nerd-icons-codicon "nf-cod-symbol_array") :face font-lock-type-face)
+                (boolean ,(nerd-icons-codicon "nf-cod-symbol_boolean") :face font-lock-builtin-face)
+                (class ,(nerd-icons-codicon "nf-cod-symbol_class") :face font-lock-type-face)
+                (color ,(nerd-icons-codicon "nf-cod-symbol_color") :face success)
+                (command ,(nerd-icons-codicon "nf-cod-terminal") :face default)
+                (constant ,(nerd-icons-codicon "nf-cod-symbol_constant") :face font-lock-constant-face)
+                (constructor ,(nerd-icons-codicon "nf-cod-triangle_right") :face font-lock-function-name-face)
+                (enummember ,(nerd-icons-codicon "nf-cod-symbol_enum_member") :face font-lock-builtin-face)
+                (enum-member ,(nerd-icons-codicon "nf-cod-symbol_enum_member") :face font-lock-builtin-face)
+                (enum ,(nerd-icons-codicon "nf-cod-symbol_enum") :face font-lock-builtin-face)
+                (event ,(nerd-icons-codicon "nf-cod-symbol_event") :face font-lock-warning-face)
+                (field ,(nerd-icons-codicon "nf-cod-symbol_field") :face font-lock-variable-name-face)
+                (file ,(nerd-icons-codicon "nf-cod-symbol_file") :face font-lock-string-face)
+                (folder ,(nerd-icons-codicon "nf-cod-folder") :face font-lock-doc-face)
+                (interface ,(nerd-icons-codicon "nf-cod-symbol_interface") :face font-lock-type-face)
+                (keyword ,(nerd-icons-codicon "nf-cod-symbol_keyword") :face font-lock-keyword-face)
+                (macro ,(nerd-icons-codicon "nf-cod-symbol_misc") :face font-lock-keyword-face)
+                (magic ,(nerd-icons-codicon "nf-cod-wand") :face font-lock-builtin-face)
+                (method ,(nerd-icons-codicon "nf-cod-symbol_method") :face font-lock-function-name-face)
+                (function ,(nerd-icons-codicon "nf-cod-symbol_method") :face font-lock-function-name-face)
+                (module ,(nerd-icons-codicon "nf-cod-file_submodule") :face font-lock-preprocessor-face)
+                (numeric ,(nerd-icons-codicon "nf-cod-symbol_numeric") :face font-lock-builtin-face)
+                (operator ,(nerd-icons-codicon "nf-cod-symbol_operator") :face font-lock-comment-delimiter-face)
+                (param ,(nerd-icons-codicon "nf-cod-symbol_parameter") :face default)
+                (property ,(nerd-icons-codicon "nf-cod-symbol_property") :face font-lock-variable-name-face)
+                (reference ,(nerd-icons-codicon "nf-cod-references") :face font-lock-variable-name-face)
+                (snippet ,(nerd-icons-codicon "nf-cod-symbol_snippet") :face font-lock-string-face)
+                (string ,(nerd-icons-codicon "nf-cod-symbol_string") :face font-lock-string-face)
+                (struct ,(nerd-icons-codicon "nf-cod-symbol_structure") :face font-lock-variable-name-face)
+                (text ,(nerd-icons-codicon "nf-cod-text_size") :face font-lock-doc-face)
+                (typeparameter ,(nerd-icons-codicon "nf-cod-list_unordered") :face font-lock-type-face)
+                (type-parameter ,(nerd-icons-codicon "nf-cod-list_unordered") :face font-lock-type-face)
+                (unit ,(nerd-icons-codicon "nf-cod-symbol_ruler") :face font-lock-constant-face)
+                (value ,(nerd-icons-codicon "nf-cod-symbol_field") :face font-lock-builtin-face)
+                (variable ,(nerd-icons-codicon "nf-cod-symbol_variable") :face font-lock-variable-name-face)
+                (t ,(nerd-icons-codicon "nf-cod-code") :face font-lock-warning-face)))
+        ;; (custom-set-variables
+        ;;  '(kind-icon-default-style
+        ;;    '(:padding 0 :stroke 0 :margin 0 :radius 0 :height 0.6 :scale 1.0)))
+        ;; (add-to-list 'corfu-margin-formatters #'kind-icon-margin-formatter)
+        )
       (use-package cape
         :ensure t
         :init
@@ -885,12 +944,12 @@
     #+begin_src emacs-lisp
       (use-package rust-mode
         :ensure t
-        :custom rust-format-on-save t)
+        :custom rust-format-on-save t
+        :hook (rust-ts-mode-hook . eglot-ensure))
 
       (use-package cargo
         :ensure t
-        :hook ((rust-mode-hook . eglot-ensure)
-               (rust-ts-mode . cargo-minor-mode)))
+        :hook (rust-ts-mode-hook . cargo-minor-mode))
     #+end_src
 *** Lua
     #+begin_src emacs-lisp
@@ -1334,6 +1393,8 @@
         (markdown-fontify-code-blocks-natively t)
         :hook ((markdown-mode-hook . (lambda ()
                                        (setq tab-width 2)
+                                       (add-to-list 'eglot-server-programs '(markdown-mode . ("marksman")))
+                                       (eglot-ensure)
                                        ))))
     #+end_src
 *** YAML
