--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1296,7 +1296,7 @@
                   (file-relative-name (org-roam-node-file node) org-roam-directory))))
              (error "")))
          (setq org-roam-node-display-template
-               (concat "${type:15} ${title:*} " (propertize "${tags:10}" 'face 'org-tag)))
+               (concat "${type:15} ${title:60} " (propertize "${tags:30}" 'face 'org-tag)))
          (org-roam-db-autosync-enable))
 
        (use-package org-roam-ui
