--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -475,7 +475,6 @@
      (use-package ddskk
        :ensure t
        :demand t
-       :if (display-graphic-p)
        :bind* ("C-j" . skk-kakutei)
        :custom
        (default-input-method "japanese-skk")
@@ -488,7 +487,7 @@
          )
        (setq viper-mode nil)
        :config
-       ;; マーカーを変更する
+       ;; Change marker
        ;; https://github.com/skk-dev/ddskk/issues/162
        (defun skk-set-display-table ()
          (walk-windows (lambda (w)
@@ -628,44 +627,44 @@
         :custom (kind-icon-default-face 'corfu-default) ; to compute blended backgrounds correctly
         :config
         (setq kind-icon-use-icons nil)
-        (setq kind-icon-mapping
-              `(
-                (array ,(nerd-icons-codicon "nf-cod-symbol_array") :face font-lock-type-face)
-                (boolean ,(nerd-icons-codicon "nf-cod-symbol_boolean") :face font-lock-builtin-face)
-                (class ,(nerd-icons-codicon "nf-cod-symbol_class") :face font-lock-type-face)
-                (color ,(nerd-icons-codicon "nf-cod-symbol_color") :face success)
-                (command ,(nerd-icons-codicon "nf-cod-terminal") :face default)
-                (constant ,(nerd-icons-codicon "nf-cod-symbol_constant") :face font-lock-constant-face)
-                (constructor ,(nerd-icons-codicon "nf-cod-triangle_right") :face font-lock-function-name-face)
-                (enummember ,(nerd-icons-codicon "nf-cod-symbol_enum_member") :face font-lock-builtin-face)
-                (enum-member ,(nerd-icons-codicon "nf-cod-symbol_enum_member") :face font-lock-builtin-face)
-                (enum ,(nerd-icons-codicon "nf-cod-symbol_enum") :face font-lock-builtin-face)
-                (event ,(nerd-icons-codicon "nf-cod-symbol_event") :face font-lock-warning-face)
-                (field ,(nerd-icons-codicon "nf-cod-symbol_field") :face font-lock-variable-name-face)
-                (file ,(nerd-icons-codicon "nf-cod-symbol_file") :face font-lock-string-face)
-                (folder ,(nerd-icons-codicon "nf-cod-folder") :face font-lock-doc-face)
-                (interface ,(nerd-icons-codicon "nf-cod-symbol_interface") :face font-lock-type-face)
-                (keyword ,(nerd-icons-codicon "nf-cod-symbol_keyword") :face font-lock-keyword-face)
-                (macro ,(nerd-icons-codicon "nf-cod-symbol_misc") :face font-lock-keyword-face)
-                (magic ,(nerd-icons-codicon "nf-cod-wand") :face font-lock-builtin-face)
-                (method ,(nerd-icons-codicon "nf-cod-symbol_method") :face font-lock-function-name-face)
-                (function ,(nerd-icons-codicon "nf-cod-symbol_method") :face font-lock-function-name-face)
-                (module ,(nerd-icons-codicon "nf-cod-file_submodule") :face font-lock-preprocessor-face)
-                (numeric ,(nerd-icons-codicon "nf-cod-symbol_numeric") :face font-lock-builtin-face)
-                (operator ,(nerd-icons-codicon "nf-cod-symbol_operator") :face font-lock-comment-delimiter-face)
-                (param ,(nerd-icons-codicon "nf-cod-symbol_parameter") :face default)
-                (property ,(nerd-icons-codicon "nf-cod-symbol_property") :face font-lock-variable-name-face)
-                (reference ,(nerd-icons-codicon "nf-cod-references") :face font-lock-variable-name-face)
-                (snippet ,(nerd-icons-codicon "nf-cod-symbol_snippet") :face font-lock-string-face)
-                (string ,(nerd-icons-codicon "nf-cod-symbol_string") :face font-lock-string-face)
-                (struct ,(nerd-icons-codicon "nf-cod-symbol_structure") :face font-lock-variable-name-face)
-                (text ,(nerd-icons-codicon "nf-cod-text_size") :face font-lock-doc-face)
-                (typeparameter ,(nerd-icons-codicon "nf-cod-list_unordered") :face font-lock-type-face)
-                (type-parameter ,(nerd-icons-codicon "nf-cod-list_unordered") :face font-lock-type-face)
-                (unit ,(nerd-icons-codicon "nf-cod-symbol_ruler") :face font-lock-constant-face)
-                (value ,(nerd-icons-codicon "nf-cod-symbol_field") :face font-lock-builtin-face)
-                (variable ,(nerd-icons-codicon "nf-cod-symbol_variable") :face font-lock-variable-name-face)
-                (t ,(nerd-icons-codicon "nf-cod-code") :face font-lock-warning-face)))
+        ;; (setq kind-icon-mapping
+        ;;       `(
+        ;;         (array ,(nerd-icons-codicon "nf-cod-symbol_array") :face font-lock-type-face)
+        ;;         (boolean ,(nerd-icons-codicon "nf-cod-symbol_boolean") :face font-lock-builtin-face)
+        ;;         (class ,(nerd-icons-codicon "nf-cod-symbol_class") :face font-lock-type-face)
+        ;;         (color ,(nerd-icons-codicon "nf-cod-symbol_color") :face success)
+        ;;         (command ,(nerd-icons-codicon "nf-cod-terminal") :face default)
+        ;;         (constant ,(nerd-icons-codicon "nf-cod-symbol_constant") :face font-lock-constant-face)
+        ;;         (constructor ,(nerd-icons-codicon "nf-cod-triangle_right") :face font-lock-function-name-face)
+        ;;         (enummember ,(nerd-icons-codicon "nf-cod-symbol_enum_member") :face font-lock-builtin-face)
+        ;;         (enum-member ,(nerd-icons-codicon "nf-cod-symbol_enum_member") :face font-lock-builtin-face)
+        ;;         (enum ,(nerd-icons-codicon "nf-cod-symbol_enum") :face font-lock-builtin-face)
+        ;;         (event ,(nerd-icons-codicon "nf-cod-symbol_event") :face font-lock-warning-face)
+        ;;         (field ,(nerd-icons-codicon "nf-cod-symbol_field") :face font-lock-variable-name-face)
+        ;;         (file ,(nerd-icons-codicon "nf-cod-symbol_file") :face font-lock-string-face)
+        ;;         (folder ,(nerd-icons-codicon "nf-cod-folder") :face font-lock-doc-face)
+        ;;         (interface ,(nerd-icons-codicon "nf-cod-symbol_interface") :face font-lock-type-face)
+        ;;         (keyword ,(nerd-icons-codicon "nf-cod-symbol_keyword") :face font-lock-keyword-face)
+        ;;         (macro ,(nerd-icons-codicon "nf-cod-symbol_misc") :face font-lock-keyword-face)
+        ;;         (magic ,(nerd-icons-codicon "nf-cod-wand") :face font-lock-builtin-face)
+        ;;         (method ,(nerd-icons-codicon "nf-cod-symbol_method") :face font-lock-function-name-face)
+        ;;         (function ,(nerd-icons-codicon "nf-cod-symbol_method") :face font-lock-function-name-face)
+        ;;         (module ,(nerd-icons-codicon "nf-cod-file_submodule") :face font-lock-preprocessor-face)
+        ;;         (numeric ,(nerd-icons-codicon "nf-cod-symbol_numeric") :face font-lock-builtin-face)
+        ;;         (operator ,(nerd-icons-codicon "nf-cod-symbol_operator") :face font-lock-comment-delimiter-face)
+        ;;         (param ,(nerd-icons-codicon "nf-cod-symbol_parameter") :face default)
+        ;;         (property ,(nerd-icons-codicon "nf-cod-symbol_property") :face font-lock-variable-name-face)
+        ;;         (reference ,(nerd-icons-codicon "nf-cod-references") :face font-lock-variable-name-face)
+        ;;         (snippet ,(nerd-icons-codicon "nf-cod-symbol_snippet") :face font-lock-string-face)
+        ;;         (string ,(nerd-icons-codicon "nf-cod-symbol_string") :face font-lock-string-face)
+        ;;         (struct ,(nerd-icons-codicon "nf-cod-symbol_structure") :face font-lock-variable-name-face)
+        ;;         (text ,(nerd-icons-codicon "nf-cod-text_size") :face font-lock-doc-face)
+        ;;         (typeparameter ,(nerd-icons-codicon "nf-cod-list_unordered") :face font-lock-type-face)
+        ;;         (type-parameter ,(nerd-icons-codicon "nf-cod-list_unordered") :face font-lock-type-face)
+        ;;         (unit ,(nerd-icons-codicon "nf-cod-symbol_ruler") :face font-lock-constant-face)
+        ;;         (value ,(nerd-icons-codicon "nf-cod-symbol_field") :face font-lock-builtin-face)
+        ;;         (variable ,(nerd-icons-codicon "nf-cod-symbol_variable") :face font-lock-variable-name-face)
+        ;;         (t ,(nerd-icons-codicon "nf-cod-code") :face font-lock-warning-face)))
         (plist-put kind-icon-default-style :height 0.6)
         (add-to-list 'corfu-margin-formatters #'kind-icon-margin-formatter)
         )
@@ -862,8 +861,8 @@
        :ensure t
        :bind (nil
               :map flymake-mode-map
-              ("C-c p" . flymake-goto-prev-error)
-              ("C-c n" . flymake-goto-next-error))
+              ("C-c C-p" . flymake-goto-prev-error)
+              ("C-c C-n" . flymake-goto-next-error))
        :config
        (set-face-background 'flymake-errline "red")
        (set-face-background 'flymake-warnline "yellow"))
