--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -292,13 +292,10 @@
    #+begin_src emacs-lisp
      (when (display-graphic-p)
        (if (eq system-type 'darwin)
-           (add-to-list 'default-frame-alist '(font . "Cica-20"))
-         (add-to-list 'default-frame-alist '(font . "Cica-24"))))
+           (add-to-list 'default-frame-alist '(font . "PlemolJP-20"))
+         (add-to-list 'default-frame-alist '(font . "PlemolJP-24"))))
 
-     (use-package nerd-icons
-       :ensure t
-       :custom
-       (nerd-icons-scale-factor 0.8))
+     (use-package nerd-icons :ensure t)
 
      (use-package nerd-icons-dired
        :ensure t
