--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1271,7 +1271,7 @@
                                         :unnarrowed t)
                                        ("b" "book" plain "%?"
                                         :if-new
-                                        (file+head "reference/book/${slug}.org" "#+title: ${title}\n#+date: %U\n#+last_modified: %U\n\n* Link\n  - \n** Review\n\n* Memo\n\n* Table of contents\n")
+                                        (file+head "reference/book/${slug}.org" "#+title: ${title}\n#+date: %U\n#+last_modified: %U\n\n* Link\n  - \n Review\n\n* Memo\n\n* Table of contents\n")
                                         :immediate-finish t
                                         :unnarrowed t)
                                        ("w" "web" plain "%?"
